css/index.css
html {
    scroll-behavior: smooth;
}

body {
    font-family: Open Sans, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
        Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji,
        Segoe UI Symbol;
    color: #222;
    font-size: 0.9375rem;
    font-weight: 400;
    line-height: 1.5;
    margin: 0;
    padding: 0;
}

header nav,
section,
.jumbotron,
footer {
    margin: 0 auto;
    max-width: 720px;
    padding: 10px 15px;
}

header nav {
    max-width: 1140px;
}

h1,
h2,
h3,
h4 {
    font-weight: 300;
    line-height: 1.2;
    margin: 0 0 20px 0;
}

h1 {
    font-size: 2.34375rem;
}

h2 {
    font-size: 1.875rem;
}

h3 {
    font-size: 1.640625rem;
}

h4 {
    font-size: 1.171875rem;
}

h1 small,
h2 small,
h3 small,
h4 small {
    color: #888;
}

a {
    color: #008cba;
    text-decoration: none;
}

a:hover {
    text-decoration: underline;
}

hr {
    border: 0;
    border-top: 1px solid rgba(0, 0, 0, 0.1);
    margin: 0 0 20px 0;
}

header {
    background-color: #333;
    position: fixed;
    top: 0;
    right: 0;
    left: 0;
}

nav {
    display: flex;
    justify-content: space-between;
}

nav ul {
    list-style: none;
    display: flex;
    margin: 0;
}

nav a.brand {
    color: #fff;
    font-size: 1.171875rem;
    font-weight: 300;
}

nav a.brand:hover {
    text-decoration: none;
}

nav ul a {
    color: rgba(255, 255, 255, 0.7);
    text-decoration: none;
    font-size: 0.8203125rem;
    font-weight: 300;
    margin: 0 10px;
}

nav ul a:hover {
    color: #fff;
    text-decoration: none;
}

.cover {
    color: #fff;
    background-color: #444;
    border-bottom: 2px solid #333;
    background-image: url(/images/cover.jpg);
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
    text-align: center;
    padding: 75px 0 0 0;
    margin-bottom: 20px;
}

.jumbotron h1 small {
    color: rgba(255, 255, 255, 0.7);
}

.jumbotron p {
    font-size: 1.171875rem;
    font-weight: 300;
}

.profile {
    background-color: #fff;
    border: 5px solid #fff;
    width: 180px;
    height: 180px;
    border-radius: 50%;
}

.icon {
    margin: 0 5px;
}

.icon:hover {
    text-decoration: none;
}

.icon img {
    width: 70px;
    height: 70px;
}

.btn {
    display: inline-block;
    color: #fff;
    background-color: #008cba;
    font-size: 1.171875rem;
    line-height: 1.5;
    padding: 10px 20px;
}

.btn:hover {
    background-color: #006f94;
    text-decoration: none;
}

.badge-list {
    text-align: center;
}

.badge {
    display: inline-block;
    color: #fff;
    background-color: #5bc0de;
    font-size: 0.9rem;
    padding: 5px 15px;
    margin-bottom: 5px;
}
.card-deck {
    display: flex;
    margin: 0 0 20px 0;
    flex-direction: column;
}

.card-deck .card {
    display: flex;
    flex: 1 0 0%;
    flex-direction: column;
    border: 1px solid rgba(0, 0, 0, 0.1);
    padding: 20px;
    margin: 0 5px 5px 5px;
}

@media (min-width: 576px) {
    .card-deck {
        flex-direction: row;
    }
}

